--- a/web/template_overrides/website/game/new.html
+++ b/web/template_overrides/website/game/new.html
@@ -10,7 +10,9 @@
 
                 <hr/>
 
-
+                <p  class="lead">
+                    Du bist neu in Taltanis oder sogar ganz neu in der Welt der MUDs? Dann findest Du auf dieser Seite alle Informationen für einen möglichst einfachen Einstieg.
+                </p>
                 <p>
                     Zunächst einmal: lass dich von dem "textbasierten" Spiel nicht abschrecken! Am Anfang ist es
                     ungewohnt, aber schon nach kurzer Zeit geht alles fast wie von allein. Und wir tun unser
