--- a/web/template_overrides/website/game/prologue.html
+++ b/web/template_overrides/website/game/prologue.html
@@ -5,6 +5,7 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title">Zu Gast in Taltanis</h1>
+                (An die Spielerinnen und Spieler)
                 <hr/>
 
                 <p>
@@ -22,8 +23,7 @@
                 <p>
                     Und wenn du das nicht kannst, dann gibt es eine ganz einfache Lösung: Sei <b>nicht</b> unser Gast.
                     Niemand zwingt dich, hier zu sein. Niemand will dann, dass du hier bist. Unser Gast sein zu dürfen
-                    ist, wie man so schön sagt, ein Privileg. Aber kein Recht. Und wenn du das anders siehst, dann irrst
-                    du dich.
+                    ist, wie man so schön sagt, ein Privileg. Aber kein Recht.
                 </p>
                 <p>
                     Also: Sei freundlich zu den Menschen, die das hier für dich entwickeln. Sei freundlich zu den
